# emg2mu

./: .bumpversion.cfg  .coverage  .gitattributes  .gitignore  LICENSE.md  README.md  emg2mu.code-workspace  pyproject.toml  sample_decompose.ipynb  setup.py
.github/workflows/: tests.yml
emg2mu/: __init__.py  emg2mu.py  sample_decompose.ipynb  version.py
emg2mu/core/: decomposition.py  ica.py  preprocessing.py
emg2mu/detection/: duplicate_detection.py
emg2mu/exmaple/: sample1_ICA.npz  sample1_score.npy  sample1_small.mat
emg2mu/sample_data/: sample_decompose.py
emg2mu/tests/: test_decomposition.py  test_emg2mu.py  test_ica.py  test_utils.py
emg2mu/utils/: io.py
emg2mu/visualization/: plots.py
sample_data/: sample1.mat  sample1_ICA.npz  sample1_score.npy  sample_decompose.ipynb  sample_decompose.py
